Stable state before agent changes